--- a/MyMainDiplomProject/wwwroot/css/styles.css
+++ b/MyMainDiplomProject/wwwroot/css/styles.css
@@ -337,13 +337,19 @@ nav {
 
 .user-block-page {
     background-color: #fff;
+
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
     width: 300px;
-    float: left;
+
+;
+    float: right;
     border-radius: 10px;
-    font-size: 20px
+    font-size: 20px;
+    left: 0;
+    position: absolute;
+    margin-left: 300px;
 }
 
     .user-block-page h2 {
