User seatings and details

--- a/MyMainDiplomProject/Views/Shared/_Layout.cshtml
+++ b/MyMainDiplomProject/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li><a href="/Posts/MyUserProfile"><i class="fa fa-user"></i></a></li>
-                    <li><a href="~/UserAdditionalInfo/Setings"><i class="fa fa-cog"></i></a></li>
+                    <li><a href="~/UserAdditionalInfoes/Index?UserId=MyProfile"><i class="fa fa-cog"></i></a></li>
                 }
                 @if(User.Identity.AuthenticationType == "Admin")
                 {
